--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+        *{
+            text-align: center;
+            color:white;
+        }
+        body{
+            background-color: black;
+        }
+        h1{
+            color:red;
+            font-size: 100px;
+            
+        }
+    </style>
 </head>
 <body>
     <img src="https://scontent-dfw5-1.xx.fbcdn.net/v/t1.0-9/10559747_10154609604550206_7838850221416991399_n.jpg?_nc_cat=0&oh=515ad24b65f50b3bc9a176a1bbe31fed&oe=5BD0F0BF" alt="Olivia y yo ">
