--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
             font-size: 100px;
             
         }
+        img {
+            transition:0.5s;
+            opacity: 0.5;
+            border-radius: 5000px;
+            transform: rotate(50deg);
+            width: 300px;
+            height: 300px;
+            cursor: pointer;
+        }
+        img:hover {
+            transform: scale(1.15);
+            transition: 0.5s;
+            
+        }
     </style>
 </head>
 <body>
