img opacity to 1 on hover

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
             cursor: pointer;
         }
         img:hover {
-            transform: scale(1.15);
+            transform: scale(1.5);
             transition: 0.5s;
+            opacity: 1;
             
         }
     </style>
